# django-sqlite-backup

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  test-requirements.txt
.github/workflows/: release.yml  testing.yml
django_sqlite_backup/: apps.py  aws.py  backup.py  decorators.py  list_backups.py  restore.py  urls.py  views.py
django_sqlite_backup/management/commands/: backup.py  list_backups.py  restore.py
testing/: constants.py  dummy_backup.py  helpers.py  settings.py
tests/: conftest.py  settings.py  test_app_ready.py  test_aws_backup.py  test_aws_list_backups.py  test_aws_restore.py  test_aws_s3_endpoint.py  test_backup_command.py  test_backup_view.py  test_get_backup_class.py  test_list_backup.py  test_list_backup_command.py  test_restore.py  test_restore_command.py  urls.py
